--- a/.env
+++ b/.env
@@ -3,7 +3,11 @@ NEXT_PUBLIC_ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
 NEXT_PUBLIC_ENDPOINT1=https://fast-tundra-88970.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com/
-NEXT_PUBLIC_ENDPOINT5=https://light-burned-violet.solana-mainnet.quiknode.pro/71d07f62b90c187da1d30ee7637a3997caeca01a/
+NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
+NEXT_PUBLIC_ENDPOINT6=https://lit-garden-60666-9ee3175d5e11.herokuapp.com/api/add-to-waitlist
+NEXT_PUBLIC_ENDPOINT7=https://lit-garden-60666-9ee3175d5e11.herokuapp.com/api/check-allowlist
+
+
 
 order1=localhost:5000
 order2=localhost:7000
