--- a/.env
+++ b/.env
@@ -3,7 +3,28 @@ NEXT_PUBLIC_ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
 NEXT_PUBLIC_ENDPOINT1=https://fast-tundra-88970.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com/
+
+
 NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
+NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
+
+PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
+
+HOUSE_WALLET="DhXJ4ZVR7YM45tBtYk7MkoFcZKpBx1wskYQDzEQWLGGR"
+NFT_WALLET="GR3uA5PQh7kzadxPxg4hTDWQJBKwqVEC1koYP2cfUVHW"
+
+
+ORACLE_SOL_WALLET="J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix"
+ORACLE_BTC_WALLET="HovQMDrbAgAYPCmHVSrezcSmkMtXSSUsLDFANExrZh2J"
+ORACLE_PYTH_WALLET="ELF78ZhSr8u4SCixA7YSpjdZHZoSNrAhcyysbavpC2kA"
+ORACLE_BONK_WALLET="6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn"
+ORACLE_JUP_WALLET="6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn"
+
+PDA_HOUSE_WALLET="39BEU1QCihL7dHKK9pvTASJeQqYKu5y9ZwUW4Mbs6sj2"
+SIGNER_WALLET="5mZkCKYKdTq1ksMw7FCJaXfomZuk9WtNnvq8Xqck9im7"
+LP_REV_WALLET="AQhDqXf4n2U4NQwheqZ7gFjPMSF7Yu5onw4zDv1GtM1A"
+
+
 NEXT_PUBLIC_ENDPOINT6=https://lit-garden-60666-9ee3175d5e11.herokuapp.com/api/add-to-waitlist
 NEXT_PUBLIC_ENDPOINT7=https://lit-garden-60666-9ee3175d5e11.herokuapp.com/api/check-allowlist
 
