--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/emoji-mart": "^3.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.0.2",
+    "axios": "^1.6.5",
     "body-scroll-lock": "^4.0.0-beta.0",
     "daisyui": "^1.24.3",
     "date-fns": "^2.29.3",
@@ -52,6 +53,7 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-parallax": "^3.5.1",
+    "react-reconciler": "^0.29.0",
     "react-resize-detector": "^9.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.16.0",
