--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
@@ -40,6 +41,7 @@
     "identicon.js": "^2.3.3",
     "immer": "^9.0.12",
     "lightweight-charts": "^4.0.1",
+    "localforage": "^1.10.0",
     "moment-timezone": "^0.5.43",
     "next": "^13.1.5",
     "next-compose-plugins": "^2.2.1",
