profile_info_and_fees

--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@
 NEXT_PUBLIC_ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
 NEXT_PUBLIC_ENDPOINT1=https://fast-tundra-88970.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
-NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com/
+NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
+NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
-NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
+
+NEXT_PUBLIC_ENDPOINT5=https://mainnet.helius-rpc.com/?api-key=4df49ac9-db21-49d4-bf84-29b3bbd42cc0
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
 PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
@@ -24,9 +26,6 @@ PDA_HOUSE_WALLET="39BEU1QCihL7dHKK9pvTASJeQqYKu5y9ZwUW4Mbs6sj2"
 SIGNER_WALLET="5mZkCKYKdTq1ksMw7FCJaXfomZuk9WtNnvq8Xqck9im7"
 LP_REV_WALLET="AQhDqXf4n2U4NQwheqZ7gFjPMSF7Yu5onw4zDv1GtM1A"
 
-
-NEXT_PUBLIC_ENDPOINT6=https://lit-garden-60666-9ee3175d5e11.herokuapp.com/api/add-to-waitlist
-NEXT_PUBLIC_ENDPOINT7=https://lit-garden-60666-9ee3175d5e11.herokuapp.com/api/check-allowlist
 
 
 
