--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
 
-NEXT_PUBLIC_ENDPOINT5=https://mainnet.helius-rpc.com/?api-key=4df49ac9-db21-49d4-bf84-29b3bbd42cc0
+NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
 PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
