--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
 
-NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
+NEXT_PUBLIC_ENDPOINT5=https://mainnet.helius-rpc.com/?api-key=8ee35ed6-2540-48cc-8833-9d675b3d616f
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
 PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
