--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rellax": "^1.12.1",
     "rsuite": "^5.40.0",
     "seamless-scroll-polyfill": "^2.3.4",
+    "worker-timers": "^7.1.1",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
