--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 
-NEXT_PUBLIC_ENDPOINT2=localhost:5050
+NEXT_PUBLIC_ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
 NEXT_PUBLIC_ENDPOINT1=https://fast-tundra-88970.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
+
 
 
 NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
