--- a/.env
+++ b/.env
@@ -6,13 +6,20 @@ NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
-NEXT_PUBLIC_ENDPOINT5=https://rpc-proxy.maus-2f5.workers.dev
+NEXT_PUBLIC_ENDPOINT5=https://devnet.helius-rpc.com/?api-key=6cbc3bae-2224-4520-b5ed-e5850b8dae10
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
 PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
 
-HOUSE_WALLET="DhXJ4ZVR7YM45tBtYk7MkoFcZKpBx1wskYQDzEQWLGGR"
-NFT_WALLET="GR3uA5PQh7kzadxPxg4hTDWQJBKwqVEC1koYP2cfUVHW"
+NEXT_PUBLIC_HOUSE_WALLET=8GeUauK6otjuhQbjqQ4mXs76ZHKefKHS6WMMPE5KRwgZ
+NEXT_PUBLIC_SIGNER_WALLET=99fHAcLBHXZ6D8SFaXPQX6wgV8Bq1FVo5EBk8ikQj8tu
+NEXT_PUBLIC_PDA_HOUSEWALLET=39BEU1QCihL7dHKK9pvTASJeQqYKu5y9ZwUW4Mbs6sj2
+NEXT_PUBLIC_USDC_MINT=Gh9ZwEmdLJ8DscKNTkTqPbNwLNNBjuSzaG9Vp2KGtKJr
+NEXT_PUBLIC_ASSOCIATED_TOKENPROGRAM=ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL
+NEXT_PUBLIC_TOKEN_PROGRAM=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
+NEXT_PUBLIC_PUSDC_MINT=HHh8UYxfT7BSpJS8Pf9hrL3whMLqkgcAvFBorAnSWHV9
+NEXT_PUBLIC_PSOL_MINT=31pL6jh3GDZE1Qsm2hprFtjDJPBLKEH3VrVqAAk3hKRH
+NEXT_PUBLIC_USDCPDA_HOUSEWALLET=7PBv24PgyoMjikNKKTQ8F9431W8RobrQ4XUmHH9i1aWx
 
 
 ORACLE_SOL_WALLET="J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix"
@@ -21,9 +28,6 @@ ORACLE_PYTH_WALLET="ELF78ZhSr8u4SCixA7YSpjdZHZoSNrAhcyysbavpC2kA"
 ORACLE_BONK_WALLET="6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn"
 ORACLE_JUP_WALLET="6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn"
 
-PDA_HOUSE_WALLET="39BEU1QCihL7dHKK9pvTASJeQqYKu5y9ZwUW4Mbs6sj2"
-SIGNER_WALLET="5mZkCKYKdTq1ksMw7FCJaXfomZuk9WtNnvq8Xqck9im7"
-LP_REV_WALLET="AQhDqXf4n2U4NQwheqZ7gFjPMSF7Yu5onw4zDv1GtM1A"
 
 
 
