--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@project-serum/anchor": "^0.26.0",
     "@project-serum/borsh": "^0.2.5",
     "@pythnetwork/client": "^2.19.0",
+    "@solana/spl-token": "^0.4.0",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.18",
