--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "rc-slider": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-flip-move": "^3.0.5",
     "react-ga": "^3.3.1",
     "react-icons": "^4.10.1",
