trade and interestbar

--- a/.env
+++ b/.env
@@ -20,6 +20,8 @@ NEXT_PUBLIC_TOKEN_PROGRAM=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
 NEXT_PUBLIC_PUSDC_MINT=HHh8UYxfT7BSpJS8Pf9hrL3whMLqkgcAvFBorAnSWHV9
 NEXT_PUBLIC_PSOL_MINT=31pL6jh3GDZE1Qsm2hprFtjDJPBLKEH3VrVqAAk3hKRH
 NEXT_PUBLIC_USDCPDA_HOUSEWALLET=7PBv24PgyoMjikNKKTQ8F9431W8RobrQ4XUmHH9i1aWx
+NEXT_PUBLIC_LONG_SHORT_ACC=5xKmHuyTfJ5eN58wxXCp4pfWQiqpeKYjKxVnTm86abCV
+
 
 
 ORACLE_SOL_WALLET="J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix"
