--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-NEXT_PUBLIC_ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
-NEXT_PUBLIC_ENDPOINT1=https://fast-tundra-88970.herokuapp.com
+NEXT_PUBLIC_ENDPOINT2=localhost:5050
+NEXT_PUBLIC_ENDPOINT1=localhost:7050
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
@@ -21,6 +21,9 @@ NEXT_PUBLIC_PUSDC_MINT=HHh8UYxfT7BSpJS8Pf9hrL3whMLqkgcAvFBorAnSWHV9
 NEXT_PUBLIC_PSOL_MINT=31pL6jh3GDZE1Qsm2hprFtjDJPBLKEH3VrVqAAk3hKRH
 NEXT_PUBLIC_USDCPDA_HOUSEWALLET=7PBv24PgyoMjikNKKTQ8F9431W8RobrQ4XUmHH9i1aWx
 NEXT_PUBLIC_LONG_SHORT_ACC=5xKmHuyTfJ5eN58wxXCp4pfWQiqpeKYjKxVnTm86abCV
+NEXT_PUBLIC_LP_ACC=AUURRMKsMjBK1zaMUmWyy8nCABXZDVtoucwHZBUnh3bB
+NEXT_PUBLIC_RATIO_ACC=5xKmHuyTfJ5eN58wxXCp4pfWQiqpeKYjKxVnTm86abCV
+
 
 
 
@@ -32,8 +35,10 @@ ORACLE_JUP_WALLET="6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn"
 
 
 
+ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
+ENDPOINT1=https://fast-tundra-88970.herokuapp.com
 
 
-order1=localhost:5000
-order2=localhost:7000
+order1=localhost:5050
+order2=localhost:7050
 order3=localhost:9000
