--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 
-NEXT_PUBLIC_ENDPOINT2=localhost:5050
-NEXT_PUBLIC_ENDPOINT1=localhost:7050
+NEXT_PUBLIC_ENDPOINT2=https://stark-crag-45455-a3ac206722e1.herokuapp.com
+NEXT_PUBLIC_ENDPOINT1=https://floating-escarpment-45589-5c71dd20f288.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
-NEXT_PUBLIC_ENDPOINT5=https://devnet.helius-rpc.com/?api-key=6cbc3bae-2224-4520-b5ed-e5850b8dae10
+NEXT_PUBLIC_ENDPOINT5=https://devnet.helius-rpc.com/?api-key=b3becd0c-44c5-4cfb-9c70-04a997f554aa
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
 PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
