--- a/.env
+++ b/.env
@@ -38,6 +38,7 @@ ORACLE_JUP_WALLET="6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn"
 ENDPOINT2=https://frozen-hamlet-77237-31263ec4359d.herokuapp.com
 ENDPOINT1=https://fast-tundra-88970.herokuapp.com
 
+NEXT_PUBLIC_ENDasdasdasPOINT2=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 
 order1=localhost:5050
 order2=localhost:7050
