--- a/.env
+++ b/.env
@@ -24,7 +24,14 @@ NEXT_PUBLIC_LONG_SHORT_ACC=5xKmHuyTfJ5eN58wxXCp4pfWQiqpeKYjKxVnTm86abCV
 NEXT_PUBLIC_LP_ACC=AUURRMKsMjBK1zaMUmWyy8nCABXZDVtoucwHZBUnh3bB
 NEXT_PUBLIC_RATIO_ACC=5xKmHuyTfJ5eN58wxXCp4pfWQiqpeKYjKxVnTm86abCV
 
-
+NEXT_PUBLIC_SOL=J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix
+NEXT_PUBLIC_BTC=HovQMDrbAgAYPCmHVSrezcSmkMtXSSUsLDFANExrZh2J
+NEXT_PUBLIC_PYTH=ELF78ZhSr8u4SCixA7YSpjdZHZoSNrAhcyysbavpC2kA
+NEXT_PUBLIC_BONK=6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn
+NEXT_PUBLIC_JUP=Gh9hscza9YaCzr84tNV1NZQfpqoL3csYnWDygDkQmBU2
+NEXT_PUBLIC_ETH=EdVCmQ9FSPcVe5YySXDPCRmc8aDQLKJ9xvYBMZPie1Vw
+NEXT_PUBLIC_TIA=4GiL1Y6u6JkPb7ckakzJgc414h6P7qoYnEKFcd1YtSB9
+NEXT_PUBLIC_SUI=6SK9vS8eMSSj3LUX2dPku93CrNv8xLCp9ng39F39h7A5
 
 
 ORACLE_SOL_WALLET="J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix"
