--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "range-slider-input": "^2.4.4",
     "rc-slider": "^10.3.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-flip-move": "^3.0.5",
