--- a/.env
+++ b/.env
@@ -6,25 +6,35 @@ NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
-NEXT_PUBLIC_ENDPOINT5=https://devnet.helius-rpc.com/?api-key=8ee35ed6-2540-48cc-8833-9d675b3d616f
+NEXT_PUBLIC_ENDPOINT5=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
-PROGRAM_ID="72GXz5HcGmnuU1M87MGRkb3cJZVTxatCjL56y1gdPRob"
+PROGRAM_ID=GXDEPFyN6WHhKGdLvK2xtbte6ZPhLgDAGtLXCFfVXHJ3
 
 NEXT_PUBLIC_HOUSE_WALLET=JAqCMbZdfrvCtN56umJU3F3iqwuc6xFqku1RubcAPjii
 NEXT_PUBLIC_SIGNER_WALLET=99fHAcLBHXZ6D8SFaXPQX6wgV8Bq1FVo5EBk8ikQj8tu
-NEXT_PUBLIC_PDA_HOUSEWALLET=39BEU1QCihL7dHKK9pvTASJeQqYKu5y9ZwUW4Mbs6sj2
+NEXT_PUBLIC_PDA_HOUSEWALLET=6drNAm4RgfzJfpV2baw6Ts4sp57GNjWbmDHwFLdnDwHs
+
+NEXT_PUBLIC_LP_ACC=c6evmP9k1PQs2719iSwpAhf6FYi4MwXnNTCapB66EGk
+
+NEXT_PUBLIC_LONG_SHORT_ACC=Aw137vyznuqGM47c2J45yzoeiHLiKKp581G4uqExqzJf
+NEXT_PUBLIC_RATIO_ACC=Aw137vyznuqGM47c2J45yzoeiHLiKKp581G4uqExqzJf
+
+NEXT_PUBLIC_PUSDC_MINT=5H8aC7zpMshKPnEJwUC4ZJSdV48PNS3GvPQcPcqkZKwa
+NEXT_PUBLIC_PSOL_MINT=AwAqv9psQBs1yJsBnN6NPspWHrqR5qFFTPGbRKUaLXR7
+
 NEXT_PUBLIC_USDC_MINT=GmqdM8wo7HTV6SvcdRCMVY1ZVqr26vnTBSUXoi9AfpbG
+
+NEXT_PUBLIC_USDCPDA_HOUSEWALLET=89zhb2iuQLcrbnhveM9jqxAo53SbXr1cBkzbDaTtrovx
+NEXT_PUBLIC_PUSDC_PDA=7rq6R6mEdBppQcfBVB15LuX7SXevarK5n2Q9LhR3Gzc4
+NEXT_PUBLIC_PSOL_PDA=4rdGUrhNCw8V7ThGGrcfLZdePnwceMK6Yvmqv6kT2XbB
+
+NEXT_PUBLIC_USDC_HOUSEWALLET=6K3toZNYipVfGMYgQx3EKNTcXmKmTSNVwzh2hd8JLiQ7
+NEXT_PUBLIC_USDC_NFTWALLET=13UvnR3mnEzfS2aTtrMbKAtVoR2XV1CYSnrGFQxtSLai
+
+
 NEXT_PUBLIC_ASSOCIATED_TOKENPROGRAM=ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL
 NEXT_PUBLIC_TOKEN_PROGRAM=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
-NEXT_PUBLIC_PUSDC_MINT=HHh8UYxfT7BSpJS8Pf9hrL3whMLqkgcAvFBorAnSWHV9
-NEXT_PUBLIC_PSOL_MINT=31pL6jh3GDZE1Qsm2hprFtjDJPBLKEH3VrVqAAk3hKRH
-NEXT_PUBLIC_USDCPDA_HOUSEWALLET=AXWohkLX2BGSepL3oM4QiDwQrDKFZdUeuNoFxRFb4hrX
-NEXT_PUBLIC_LONG_SHORT_ACC=61JYPHcyDV55G3hJYwToH7Et542x1eBnXg6ZqxLyAVtY
-NEXT_PUBLIC_LP_ACC=J92aZNmuSTRaUxpdiNXmQ5MpHEJf6QXEQ8mu8k66tVzH
-NEXT_PUBLIC_RATIO_ACC=61JYPHcyDV55G3hJYwToH7Et542x1eBnXg6ZqxLyAVtY
-NEXT_PUBLIC_PUSDC_PDA=CK1WBSEdLE6RBNo7X7dCzefSGFozeKmg2HW8Nr3Wwzrf
-NEXT_PUBLIC_PSOL_PDA=7PwUUdGSM43EQsH7msu49YH9gwNTdeDmHcDQz8EQnw72
 
 NEXT_PUBLIC_SOL=J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix
 NEXT_PUBLIC_BTC=HovQMDrbAgAYPCmHVSrezcSmkMtXSSUsLDFANExrZh2J
