--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
 
 
-NEXT_PUBLIC_ENDPOINT5=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
+NEXT_PUBLIC_ENDPOINT5=https://devnet.helius-rpc.com/?api-key=e71bc182-3c21-4c40-bc31-e00c0ac1ee38
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
 
 PROGRAM_ID=GXDEPFyN6WHhKGdLvK2xtbte6ZPhLgDAGtLXCFfVXHJ3
