--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_ENDPOINT2=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT1=https://floating-escarpment-45589-5c71dd20f288.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
-NEXT_PUBLIC_ENDPOINT8=https://cryptic-shelf-80719-1b4c5d7be19b.herokuapp.com
+NEXT_PUBLIC_ENDPOINT8=http://localhost:5500
 
 
 NEXT_PUBLIC_ENDPOINT5=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
