--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@project-serum/anchor": "^0.26.0",
     "@project-serum/borsh": "^0.2.5",
     "@pythnetwork/client": "^2.19.0",
+    "@pythnetwork/price-service-client": "^1.9.0",
+    "@pythnetwork/pyth-solana-receiver": "^0.5.0",
     "@solana/spl-token": "^0.4.0",
     "@solana/wallet-adapter-backpack": "^0.1.14",
     "@solana/wallet-adapter-base": "^0.9.23",
