--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
-
 NEXT_PUBLIC_ENDPOINT2=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT1=https://floating-escarpment-45589-5c71dd20f288.herokuapp.com
 NEXT_PUBLIC_ENDPOINT3=https://serene-reef-89664.herokuapp.com
 NEXT_PUBLIC_ENDPOINT4=https://stark-crag-45455-a3ac206722e1.herokuapp.com
 NEXT_PUBLIC_ENDPOINT8=http://localhost:5500
+NEXT_PUBLIC_ENDPOINT153=http://localhost:5500
 
+
+NEXT_PUBLIC_ENDPOINT120=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
 
 NEXT_PUBLIC_ENDPOINT5=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
 NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
@@ -36,14 +38,16 @@ NEXT_PUBLIC_USDC_NFTWALLET=13UvnR3mnEzfS2aTtrMbKAtVoR2XV1CYSnrGFQxtSLai
 NEXT_PUBLIC_ASSOCIATED_TOKENPROGRAM=ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL
 NEXT_PUBLIC_TOKEN_PROGRAM=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
 
-NEXT_PUBLIC_SOL=J83w4HKfqxwcq3BEMMkPFSppX3gqekLyLJBexebFVkix
-NEXT_PUBLIC_BTC=HovQMDrbAgAYPCmHVSrezcSmkMtXSSUsLDFANExrZh2J
-NEXT_PUBLIC_PYTH=ELF78ZhSr8u4SCixA7YSpjdZHZoSNrAhcyysbavpC2kA
-NEXT_PUBLIC_BONK=6bquU99ktV1VRiHDr8gMhDFt3kMfhCQo5nfNrg2Urvsn
-NEXT_PUBLIC_JUP=Gh9hscza9YaCzr84tNV1NZQfpqoL3csYnWDygDkQmBU2
-NEXT_PUBLIC_ETH=EdVCmQ9FSPcVe5YySXDPCRmc8aDQLKJ9xvYBMZPie1Vw
-NEXT_PUBLIC_TIA=4GiL1Y6u6JkPb7ckakzJgc414h6P7qoYnEKFcd1YtSB9
-NEXT_PUBLIC_SUI=6SK9vS8eMSSj3LUX2dPku93CrNv8xLCp9ng39F39h7A5
+NEXT_PUBLIC_SOL_CALCULATOR=7UVimffxr9ow1uXYxsr4LHAcV58mLzhmwaeKvJ1pjLiE
+
+NEXT_PUBLIC_SOL=3fpFnRbRX5r6vQKGbmKGqEiC6u7BK8o2FMJcziy2MqBW
+NEXT_PUBLIC_BTC=9LiLmymuxEEVNGYsuk2PCxNJ88e2zZNPHzbp4o82sj8m
+NEXT_PUBLIC_PYTH=2MAK6bAFb5a3sWSbmZZhjG3PE2Mw9YF1SBKdkNGkNcwx
+NEXT_PUBLIC_BONK=6sUwYMC34TMcj82aBDcTdnRcMKz3xLyTTLnBazhcnSRb
+NEXT_PUBLIC_JUP=67TkQw8bZ3fy3tH3uuTf77oGMg1LTASP1wbhsoZGi9zT
+NEXT_PUBLIC_ETH=EbtjMKMzBBB86RGY8r3ZhghsTMBG8PCVHQjWjb9N7fFT
+NEXT_PUBLIC_TIA=H1yDWsqRcGZr7QQYD8myQxr6P8aP8rYk99rhx87J8Jvi
+NEXT_PUBLIC_SUI=ETPm3FtXtb7JoqBbLZbRXbbtnZBVX3BEGm8a9xCLnmo1
 
 
 
