--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "rellax": "^1.12.1",
     "rsuite": "^5.40.0",
     "seamless-scroll-polyfill": "^2.3.4",
+    "socket.io-client": "^4.7.5",
     "worker-timers": "^7.1.1",
     "zustand": "^3.6.9"
   },
