--- a/.env
+++ b/.env
@@ -9,28 +9,30 @@ NEXT_PUBLIC_ENDPOINT153=http://localhost:5500
 
 NEXT_PUBLIC_ENDPOINT120=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
 
-NEXT_PUBLIC_ENDPOINT5=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
-NEXT_PUBLIC_ENDPOINT10=https://rpc-proxy.maus-2f5.workers.dev
+NEXT_PUBLIC_ENDPOINT5=https://popfiio-main059-74ba.mainnet.rpcpool.com/1cb3bc2b-3ed9-40cb-a62f-6c2f73e3e65c
+NEXT_PUBLIC_ENDPOINT10=https://popfiio-main059-74ba.mainnet.rpcpool.com/1cb3bc2b-3ed9-40cb-a62f-6c2f73e3e65c
 
-PROGRAM_ID=GXDEPFyN6WHhKGdLvK2xtbte6ZPhLgDAGtLXCFfVXHJ3
+PROGRAM_ID=PopFiDLVBg7MRoyzerAop6p85uxdM73nSFj35Zjn5Mt
 
-NEXT_PUBLIC_HOUSE_WALLET=JAqCMbZdfrvCtN56umJU3F3iqwuc6xFqku1RubcAPjii
+NEXT_PUBLIC_HOUSE_WALLET=HME9CUNgcsVZti5x1MdoBeUuo1hkGnuKMwP4xuJHQFtQ
 NEXT_PUBLIC_SIGNER_WALLET=99fHAcLBHXZ6D8SFaXPQX6wgV8Bq1FVo5EBk8ikQj8tu
-NEXT_PUBLIC_PDA_HOUSEWALLET=6drNAm4RgfzJfpV2baw6Ts4sp57GNjWbmDHwFLdnDwHs
+NEXT_PUBLIC_PDA_HOUSEWALLET=CJmyfqS38YCAc3Yhrf1Eg7xnJTiYZiWhZAC9kdHQDcob
 
-NEXT_PUBLIC_LP_ACC=c6evmP9k1PQs2719iSwpAhf6FYi4MwXnNTCapB66EGk
+NEXT_PUBLIC_LP_ACC=5hvAs89NQV1aPXYQDUECi6SXRTU8gStrypYVpf9AJzvs
 
-NEXT_PUBLIC_LONG_SHORT_ACC=Aw137vyznuqGM47c2J45yzoeiHLiKKp581G4uqExqzJf
-NEXT_PUBLIC_RATIO_ACC=Aw137vyznuqGM47c2J45yzoeiHLiKKp581G4uqExqzJf
+NEXT_PUBLIC_LONG_SHORT_ACC=JCUgSbcbzdPC7nWCghvWDoLXNDqmdSxMunZoJQVtYrQT
+NEXT_PUBLIC_RATIO_ACC=JCUgSbcbzdPC7nWCghvWDoLXNDqmdSxMunZoJQVtYrQT
 
-NEXT_PUBLIC_PUSDC_MINT=5H8aC7zpMshKPnEJwUC4ZJSdV48PNS3GvPQcPcqkZKwa
-NEXT_PUBLIC_PSOL_MINT=AwAqv9psQBs1yJsBnN6NPspWHrqR5qFFTPGbRKUaLXR7
+NEXT_PUBLIC_PUSDC_MINT=4eP4rpuBniZ9ZvDMYEExwn46aCKLwoaQs3fsVwF5BLKN
 
-NEXT_PUBLIC_USDC_MINT=GmqdM8wo7HTV6SvcdRCMVY1ZVqr26vnTBSUXoi9AfpbG
 
-NEXT_PUBLIC_USDCPDA_HOUSEWALLET=89zhb2iuQLcrbnhveM9jqxAo53SbXr1cBkzbDaTtrovx
-NEXT_PUBLIC_PUSDC_PDA=7rq6R6mEdBppQcfBVB15LuX7SXevarK5n2Q9LhR3Gzc4
-NEXT_PUBLIC_PSOL_PDA=4rdGUrhNCw8V7ThGGrcfLZdePnwceMK6Yvmqv6kT2XbB
+NEXT_PUBLIC_PSOL_MINT=6cr1GphqFrzPUo8x9UWUARpExJQbKTkvkAqyqyEBr7rP
+
+NEXT_PUBLIC_USDC_MINT=EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
+
+NEXT_PUBLIC_USDCPDA_HOUSEWALLET=GqqF369M2JbVxuSEEFNsWHj5rDVDoM9UgMcE5tGTsZAJ
+NEXT_PUBLIC_PUSDC_PDA=EFJNpGa791KTfKbsjJGUtpbC7anXVYYkRhFx8fjzoqet
+NEXT_PUBLIC_PSOL_PDA=9qqRAYdqSMSeKLJx8cvpYaSCJUikUrUZFRdPcDUGMz3w
 
 NEXT_PUBLIC_USDC_HOUSEWALLET=6K3toZNYipVfGMYgQx3EKNTcXmKmTSNVwzh2hd8JLiQ7
 NEXT_PUBLIC_USDC_NFTWALLET=13UvnR3mnEzfS2aTtrMbKAtVoR2XV1CYSnrGFQxtSLai
