--- a/.env
+++ b/.env
@@ -7,10 +7,11 @@ NEXT_PUBLIC_ENDPOINT153=http://localhost:5500
 
 
 
-NEXT_PUBLIC_ENDPOINT120=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/db414af0-5f3e-4361-9e4c-7ddec152ec14
+NEXT_PUBLIC_ENDPOINT120=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/
 
-NEXT_PUBLIC_ENDPOINT5=https://popfiio-main059-74ba.mainnet.rpcpool.com/1cb3bc2b-3ed9-40cb-a62f-6c2f73e3e65c
-NEXT_PUBLIC_ENDPOINT10=https://popfiio-main059-74ba.mainnet.rpcpool.com/1cb3bc2b-3ed9-40cb-a62f-6c2f73e3e65c
+NEXT_PUBLIC_ENDPOINT5=https://popfiio-main059-74ba.mainnet.rpcpool.com/
+NEXT_PUBLIC_ENDPOINT13=https://mainnet.helius-rpc.com/
+NEXT_PUBLIC_ENDPOINT10=https://popfiio-main059-74ba.mainnet.rpcpool.com/
 
 PROGRAM_ID=PopFiDLVBg7MRoyzerAop6p85uxdM73nSFj35Zjn5Mt
 
