--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NEXT_PUBLIC_ENDPOINT153=http://localhost:5500
 NEXT_PUBLIC_ENDPOINT120=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/
 
 NEXT_PUBLIC_ENDPOINT5=https://popfiio-main059-74ba.mainnet.rpcpool.com/
-NEXT_PUBLIC_ENDPOINT13=https://mainnet.helius-rpc.com/
+NEXT_PUBLIC_ENDPOINT13=https://rpc-proxy.maus-2f5.workers.dev
 NEXT_PUBLIC_ENDPOINT10=https://popfiio-main059-74ba.mainnet.rpcpool.com/
 
 PROGRAM_ID=PopFiDLVBg7MRoyzerAop6p85uxdM73nSFj35Zjn5Mt
