--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ NEXT_PUBLIC_ENDPOINT153=http://localhost:5500
 
 NEXT_PUBLIC_ENDPOINT120=https://popfiio-dev0eaf-d2e6.devnet.rpcpool.com/
 
-NEXT_PUBLIC_ENDPOINT5=https://popfiio-main059-74ba.mainnet.rpcpool.com/
-NEXT_PUBLIC_ENDPOINT13=https://mainnet.helius-rpc.com/?api-key=b3becd0c-44c5-4cfb-9c70-04a997f554aa
-NEXT_PUBLIC_ENDPOINT10=https://popfiio-main059-74ba.mainnet.rpcpool.com/
+NEXT_PUBLIC_ENDPOINT5=https://popfiio-main059-74ba.mainnet.rpcpool.com/1cb3bc2b-3ed9-40cb-a62f-6c2f73e3e65c
+NEXT_PUBLIC_ENDPOINT13=https://mainnet.helius-rpc.com/?api-key=8ee35ed6-2540-48cc-8833-9d675b3d616f
+NEXT_PUBLIC_ENDPOINT10=https://popfiio-main059-74ba.mainnet.rpcpool.com/1cb3bc2b-3ed9-40cb-a62f-6c2f73e3e65c
 
 PROGRAM_ID=PopFiDLVBg7MRoyzerAop6p85uxdM73nSFj35Zjn5Mt
 
