--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lightweight-charts": "^4.0.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "moment-timezone": "^0.5.43",
     "next": "^13.1.5",
     "next-compose-plugins": "^2.2.1",
