--- a/.env
+++ b/.env
@@ -6,6 +6,10 @@ NEXT_PUBLIC_ENDPOINT5=https://mainnet.helius-rpc.com/?api-key=b3becd0c-44c5-4cfb
 NEXT_PUBLIC_ENDPOINT120=https://mainnet.helius-rpc.com/?api-key=b3becd0c-44c5-4cfb-9c70-04a997f554aa
 
 NEXT_PUBLIC_USDC_MINT=EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
+NEXT_PUBLIC_APIKEY=86Am1Gonna86M4keSt4kerawork
+NEXT_PUBLIC_APIKEYTEAM=TmSFRHUH684Am1GonnaM4keSt4kerawork
+
+
 
 
 NEXT_PUBLIC_ASSOCIATED_TOKENPROGRAM=ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL
