--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@solana/wallet-adapter-solflare": "^0.6.28",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.4",
+    "@switchboard-xyz/solana.js": "^3.2.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/emoji-mart": "^3.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.0.2",
     "axios": "^1.6.5",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "chart.js": "^4.4.4",
     "daisyui": "^1.24.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.9",
@@ -53,6 +55,7 @@
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.4.10",
     "framer-motion": "^10.12.18",
+    "fs": "^0.0.1-security",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "identicon.js": "^2.3.3",
@@ -68,6 +71,7 @@
     "range-slider-input": "^2.4.4",
     "rc-slider": "^10.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
